fix: make sure that the locking order is consistent between operations